@@ -1,6 +1,8 @@
 package com.robertx22.age_of_exile.vanilla_mc.items.gearitems.bases.armor_materials;
 
+import net.minecraft.entity.EquipmentSlot;
 import net.minecraft.item.ArmorMaterial;
+import net.minecraft.item.ArmorMaterials;
 import net.minecraft.item.Items;
 import net.minecraft.recipe.Ingredient;
 import net.minecraft.sound.SoundEvent;
@@ -16,6 +18,11 @@ public abstract class BaseMat implements ArmorMaterial {
     @Override
     public Ingredient getRepairIngredient() {
         return Ingredient.ofItems(Items.STRUCTURE_BLOCK); // as in, nothing besides creative items should repair it
+    }
+
+    @Override
+    public int getDurability(EquipmentSlot slotIn) {
+        return ArmorMaterials.DIAMOND.getDurability(slotIn);
     }
 
     @Override
